Implement Eval and Supplant

--- a/GoryEmmental/GoryEmmental.vcxproj.filters
+++ b/GoryEmmental/GoryEmmental.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClInclude Include="NativeDefinition.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="InterpretedDefinition.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Emmental.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="NativeDefinition.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="InterpretedDefinition.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
