--- a/GoryEmmental/GoryEmmental.vcxproj
+++ b/GoryEmmental/GoryEmmental.vcxproj
@@ -113,10 +113,12 @@
     <ClInclude Include="Config.h" />
     <ClInclude Include="Emmental.h" />
     <ClInclude Include="EmmentalDefinition.h" />
+    <ClInclude Include="InterpretedDefinition.h" />
     <ClInclude Include="NativeDefinition.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Emmental.cpp" />
+    <ClCompile Include="InterpretedDefinition.cpp" />
     <ClCompile Include="NativeDefinition.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
