--- a/GoryEmmental/GoryEmmental.vcxproj
+++ b/GoryEmmental/GoryEmmental.vcxproj
@@ -132,11 +132,13 @@
     <ClInclude Include="Config.h" />
     <ClInclude Include="Emmental.h" />
     <ClInclude Include="EmmentalDefinition.h" />
+    <ClInclude Include="InteractiveInterpreter.h" />
     <ClInclude Include="InterpretedDefinition.h" />
     <ClInclude Include="NativeDefinition.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Emmental.cpp" />
+    <ClCompile Include="InteractiveInterpreter.cpp" />
     <ClCompile Include="InterpretedDefinition.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="NativeDefinition.cpp" />
