Add Ignore Whitespace, Quiet Mode, Lenient Mode

--- a/GoryEmmental/GoryEmmental.vcxproj
+++ b/GoryEmmental/GoryEmmental.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="Config.h" />
     <ClInclude Include="Emmental.h" />
     <ClInclude Include="EmmentalDefinition.h" />
+    <ClInclude Include="EmmentalException.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="InteractiveInterpreter.h" />
     <ClInclude Include="InterpretedDefinition.h" />
