--- a/GoryEmmental/GoryEmmental.vcxproj.filters
+++ b/GoryEmmental/GoryEmmental.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Globals.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EmmentalException.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Emmental.cpp">
